cabal-version:      2.2
name:               llama-cpp-haskell
version:            0.0.1
synopsis:           Haskell bindings for the llama.cpp llama-server
-- description:
license:            AGPL-3.0-only
license-file:       LICENSE
author:             Sergey Alirzaev
maintainer:         l29ah@riseup.net
-- copyright:
category:           Text
build-type:         Simple
-- extra-source-files:

Source-repository head
  type:              git
  location:          https://github.com/l29ah/llama-cpp-haskell.git

Source-repository this
  type:              git
  location:          https://github.com/l29ah/llama-cpp-haskell.git
  tag:               0.0.1

common stuff
    ghc-options: -Wall

library
    import:           stuff
    exposed-modules:  Llama
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , http-conduit ^>= 2.3
                    , aeson ^>= 2.2
                    , text ^>= 2.1
    default-language: Haskell2010
